--- a/app/src/main/res/layout/activity_bmi_user.xml
+++ b/app/src/main/res/layout/activity_bmi_user.xml
@@ -43,7 +43,8 @@
         android:layout_above="@+id/centerhorizontalline"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="25dp"
-        android:layout_marginBottom="23dp">
+        android:layout_marginBottom="23dp"
+        android:background="@drawable/cardbackground">
 
         <TextView
             android:layout_width="match_parent"
@@ -92,6 +93,7 @@
         android:layout_above="@+id/centerhorizontalline"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="25dp"
+        android:background="@drawable/cardbackground"
         android:layout_marginBottom="-162dp">
 
         <TextView
