--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -30,12 +30,6 @@
         android:layout_centerVertical="true" />
 
     <RelativeLayout
-        android:id="@+id/centerverticalline"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true" />
-
-    <RelativeLayout
         android:id="@+id/heightlayout"
         android:layout_width="386dp"
         android:layout_height="329dp"
@@ -43,7 +37,9 @@
         android:layout_marginLeft="35dp"
         android:layout_marginRight="25dp"
         android:layout_marginBottom="-155dp"
-        android:background="@drawable/cardbackground">
+        android:background="@drawable/cardbackground"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
         <TextView
             android:layout_width="match_parent"
