Add Empty Description Added Empty Description

--- a/app/src/main/res/layout/fragment_delete_account.xml
+++ b/app/src/main/res/layout/fragment_delete_account.xml
@@ -100,8 +100,8 @@
                 android:layout_marginRight="70dp"
                 android:background="@drawable/button"
                 android:fontFamily="@font/concert_one"
-                android:text="Delete User"
-                android:textSize="20sp" />
+                android:text="Delete Account"
+                android:textSize="16sp" />
 
         </RelativeLayout>
 
