--- a/app/src/main/res/layout/item_diet.xml
+++ b/app/src/main/res/layout/item_diet.xml
@@ -21,8 +21,7 @@
             app:layout_constraintBottom_toTopOf="@+id/guideline_left"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/chicken_adobo" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_left"
